man: bug reporting link fixed

--- a/man/lxqt-sudo.1
+++ b/man/lxqt-sudo.1
@@ -11,7 +11,7 @@ When invoked it simply spawns child \fIsudo\fR process with requested \fIcommand
 \fBlxqt-sudo-helper\fR by using sudo's \fB-A\fR parameter and setting \fBSUDO_ASKPASS\fR environment variable).
 If password is needed by \fBsudo\fR it spawns our \fBlxqt-sudo-helper\fR which in turn notifies \fBlxqt-sudo\fR master that the password is required and the password dialog is shown.
 .SH "REPORTING BUGS"
-Report bugs to https://github.com/lxde/lxde-qt/issues
+Report bugs to https://github.com/lxde/lxqt/issues
 .SH "SEE ALSO"
 \fBsudo(8)\fR
 .SH AUTHOR
