lxqt-sudo: direct communication with sudo
Avoid using multiple processes for providing the password for sudo -> avoids malicious eavesdropping for password
in shared memory.
In previous version lxqt-sudo & lxqt-sudo-helper were comunicating together via shared memory (which
could be potentialy eavesdropped by malicious 3rd party process).

--- a/man/lxqt-sudo.1
+++ b/man/lxqt-sudo.1
@@ -1,15 +1,13 @@
 .TH lxqt-sudo 1 "" "" "LXQt\ Module"
 .SH NAME
 \fBlxqt-sudo\fR \- execute a command as privileged user
-.br
-\fBlxqt-sudo-helper\fR \- slave utility used by sudo (provided to sudo by SUDO_ASKPASS)
 .SH SYNOPSIS
 \fBlxqt-sudo\fR \fIcommand\fR [\fIarguments\fR]
 .SH DESCRIPTION
 \fBlxqt-sudo\fR is a graphical QT frontend for plain \fBsudo(8)\fR (for requesting optional password in GUI fashion).
-When invoked it simply spawns child \fIsudo\fR process with requested \fIcommand\fR (and \fIarguments\fR). \fIsudo\fR is instructed to use askpass program
-\fBlxqt-sudo-helper\fR by using sudo's \fB-A\fR parameter and setting \fBSUDO_ASKPASS\fR environment variable).
-If password is needed by \fBsudo\fR it spawns our \fBlxqt-sudo-helper\fR which in turn notifies \fBlxqt-sudo\fR master that the password is required and the password dialog is shown.
+.br
+When invoked it simply spawns child \fIsudo\fR process with requested \fIcommand\fR (and \fIarguments\fR). If \fIsudo\fR requests user's password,
+the GUI password dialog is shown and (after submit) the password is provided to \fIsudo\fR.
 .SH "REPORTING BUGS"
 Report bugs to https://github.com/lxde/lxqt/issues
 .SH "SEE ALSO"
