--- a/man/lxqt-sudo.1
+++ b/man/lxqt-sudo.1
@@ -8,7 +8,7 @@
 .br
 \fBlxsudo\fR [\fIoption\fR] [\fIcommand\fR [\fIarguments\fR]]
 .SH DESCRIPTION
-\fBlxqt-sudo\fR (and symlinks \fBlxsu\fR, \fBlxsudo\fR) is a graphical QT frontend for plain \fBsudo(8)\fR or \fBsu(1)\fR(for requesting optional password in GUI fashion).
+\fBlxqt-sudo\fR (and symlinks \fBlxsu\fR, \fBlxsudo\fR) is a graphical QT frontend for plain \fBsudo(8)\fR or \fBsu(1)\fR (for requesting optional password in GUI fashion).
 .br
 When invoked it simply spawns child \fIsudo\fR or \fIsu\fR process with requested \fIcommand\fR (and optional \fIarguments\fR). If \fIsudo\fR/\fIsu\fR requests user's password,
 the GUI password dialog is shown and (after submit) the password is provided to backend.
@@ -20,9 +20,9 @@ the GUI password dialog is shown and (after submit) the password is provided to 
 .br
   -v|--version   Print version information.
 .br
-  -s|--su        Use \fIsu\fR as backend (default for \fBlxsudo\fR is \fIsudo\fR, for \fBlxsu\fR is \fIsu\fR).
+  -s|--su        Use \fIsu\fR as backend (default for \fBlxqt-sudo\fR & \fBlxsudo\fR is \fIsudo\fR, for \fBlxsu\fR is \fIsu\fR).
 .br
-  -d|--sudo      Use \fIsudo\fR as backend (default for \fBlxsudo\fR is \fIsudo\fR, for \fBlxsu\fR is \fIsu\fR).
+  -d|--sudo      Use \fIsudo\fR as backend (default for \fBlxqt-sudo\fR & \fBlxsudo\fR is \fIsudo\fR, for \fBlxsu\fR is \fIsu\fR).
 .SH "REPORTING BUGS"
 Report bugs to https://github.com/lxde/lxqt/issues
 .SH "SEE ALSO"
