--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ Upstream Authors:
     LXQt team: http://lxqt.org
 
 Copyright:
-    Copyright (c) 2015 LXQt team
+    Copyright (c) 2015-2016 LXQt team
 
 License: LGPL-2.1+
 The full text of the licenses can be found in the 'LICENSE' file.
