--- a/man/lxqt-sudo.1
+++ b/man/lxqt-sudo.1
@@ -24,7 +24,7 @@ the GUI password dialog is shown and (after submit) the password is provided to 
 .br
   -d|--sudo      Use \fIsudo\fR as backend (default for \fBlxqt-sudo\fR & \fBlxsudo\fR is \fIsudo\fR, for \fBlxsu\fR is \fIsu\fR).
 .SH "REPORTING BUGS"
-Report bugs to https://github.com/lxde/lxqt/issues
+Report bugs to https://github.com/lxqt/lxqt/issues
 .SH "SEE ALSO"
 \fBsudo(8)\fR \fBsu(1)\fR
 .SH AUTHOR
