--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Upstream Authors:
-    LXQt team: http://lxqt.org
+    LXQt team: https://lxqt.org
 
 Copyright:
     Copyright (c) 2015-2017 LXQt team
