--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,20 @@
 
+lxqt-sudo-0.14.0 / 2018-12-01
+=============================
+
+  * sudo: Force "C" locale for su/sudo
+  * sudo: Prevent malicious attempts for command injection
+  * sudo: Use better child ending logic
+  * Sudo: Strip environment - Leave only required environment 
+    variables (for X & locale) to get into the elevated child process.
+  * ui: Fixed the layout and line-break
+  * Improved cmake scripting
+    - Set cmake_minimum_required to 3.1.0
+  * Moved translations from lxqt-l10n back to lxqt-sudo
+    - Removed obsolete translation fuctionality
+    - Added translation promo in README.md
+  * Translation updates
+
 lxqt-sudo-0.13.0 / 2018-05-21
 =============================
 
