--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,12 +2,14 @@
 lxqt-sudo-0.14.0 / 2018-12-01
 =============================
 
-  * sudo: Force "C" locale for su/sudo
-  * sudo: Prevent malicious attempts for command injection
-  * sudo: Use better child ending logic
-  * Sudo: Strip environment - Leave only required environment 
-    variables (for X & locale) to get into the elevated child process.
-  * ui: Fixed the layout and line-break
+  * Implementation fixes:
+    - sudo: Force "C" locale for su/sudo
+    - sudo: Prevent malicious attempts for command injection
+    - sudo: Use better child ending logic
+    - Sudo: Strip environment - Leave only required environment 
+      variables (for X & locale) to get into the elevated child
+      process.
+    - ui: Fixed the layout and line-break
   * Improved cmake scripting
     - Set cmake_minimum_required to 3.1.0
   * Moved translations from lxqt-l10n back to lxqt-sudo
