--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,9 +6,10 @@ lxqt-sudo-0.14.0 / 2018-12-01
     - sudo: Force "C" locale for su/sudo
     - sudo: Prevent malicious attempts for command injection
     - sudo: Use better child ending logic
-    - Sudo: Strip environment - Leave only required environment 
+    - sudo: Strip environment - Leave only required environment 
       variables (for X & locale) to get into the elevated child
       process.
+    - sudo: Make critical error messages less obscure
     - ui: Fixed the layout and line-break
   * Improved cmake scripting
     - Set cmake_minimum_required to 3.1.0
