--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+lxqt-sudo-0.16.0 / 2020-11-01
+=============================
+  * ￼Use QFlags default constructor.
+
 lxqt-sudo-0.15.0 / 2020-04-23
 =============================
   * sudo: Fix (re)setting HOME with sudo backend.
