Removed object replacement character from changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 lxqt-sudo-0.16.0 / 2020-11-01
 =============================
-  * ￼Use QFlags default constructor.
+  * Use QFlags default constructor.
 
 lxqt-sudo-0.15.0 / 2020-04-23
 =============================
