--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+lxqt-sudo-1.0.0 / 2021-11-04
+=============================
+ * Updated AUTHORS.
+ * Bumped minimum required Qt version to 5.15.
+
 lxqt-sudo-0.17.0 / 2021-04-15
 =============================
   * Handled Qt5.15's deprecations.
