--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+lxqt-sudo-1.2.0 / 2022-11-05
+=============================
+ * Updated translations and bumped the version.
+
 lxqt-sudo-1.1.0 / 2022-04-15
 =============================
  * Updated translations and bumped the version.
