--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+lxqt-sudo-1.4.0 / 2023-11-05
+=============================
+ * Updated translations and bumped the version.
+
 lxqt-sudo-1.3.0 / 2023-04-15
 =============================
  * Added support for doas(1) backend.
