--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+lxqt-sudo-2.0.0 / 2024-04-17
+=============================
+ * Allow bidirectional communication with launched process.
+ * Avoid flushing empty line.
+ * Flush everything comming from child and optimize splitting of output.
+ * Ported to Qt6.
+
 lxqt-sudo-1.4.0 / 2023-11-05
 =============================
  * Updated translations and bumped the version.
