--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+lxqt-sudo-2.2.0 / 2025-04-17
+=============================
+ * Updated translations and bumped the version.
+
 lxqt-sudo-2.1.0 / 2024-11-05
 =============================
  * Add new env vars for `sudo`.
