sudo: Add new -q|--quiet parameter
..for making lxqt-sudo less verbose.

--- a/man/lxqt-sudo.1
+++ b/man/lxqt-sudo.1
@@ -22,6 +22,8 @@ the GUI password dialog is shown and (after submit) the password is provided to 
 .br
   -v|--version   Print version information.
 .br
+  -q|--quiet     Make \fBlxqt-sudo\fR less verbose.
+.br
   -s|--su        Use \fIsu\fR as backend (default for \fBlxqt-sudo\fR & \fBlxsudo\fR is \fIsudo\fR, for \fBlxsu\fR \fIsu\fR, for \fBlxdoas\fR \fIdoas\fR).
 .br
   -d|--sudo      Use \fIsudo\fR as backend (default for \fBlxqt-sudo\fR & \fBlxsudo\fR is \fIsudo\fR, for \fBlxsu\fR \fIsu\fR, for \fBlxdoas\fR \fIdoas\fR).
