--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+lxqt-sudo-2.3.0 / 2025-11-05
+=============================
+ * Added `-q|--quiet` parameter.
+
 lxqt-sudo-2.2.0 / 2025-04-17
 =============================
  * Updated translations and bumped the version.
